# ibkr-frontend-refresh

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  health.py  ibkr.py  pies.py  portfolios.py  routes.py  slices.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/models/: __init__.py  pie.py  portfolio.py  slice.py  user.py
backend/app/schemas/: __init__.py  base.py  pie_slice.py  portfolio.py
backend/app/services/: __init__.py  base.py  pie_service.py  portfolio_service.py  slice_service.py  user_service.py
backend/app/services/ibkr/: __init__.py  client.py
backend/tests/: __init__.py  conftest.py  test_health.py  test_pies_portfolio.py
docs/: database-schema.md
frontend/: .env.example  .eslintrc.json  .gitignore  Dockerfile  next.config.js  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(protected)/dashboard/: DashboardClient.tsx
frontend/src/app/(protected)/portfolios/: PortfoliosClient.tsx
frontend/src/components/pies/: PieFormModal.tsx
frontend/src/components/portfolios/: PortfolioSelector.tsx
frontend/src/lib/: supabase.ts
frontend/src/services/: ibkrApi.ts  pieApi.ts  portfolioApi.ts
frontend/src/types/: index.ts  pie.ts
plans/: plan-part1-overview.md  plan-part2-development-phases.md  plan-part3-testing-strategy.md  plan-part4-git-strategy.md
supabase/: config.toml
supabase/migrations/: 00001_initial_schema.sql  00004_portfolios.sql
